src/bucket-api/bucket-api-template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-api
  namespace: bucket-api-ns
  annotations:
    app: 'bucket-api'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bucket-api
  template:
    metadata:
      labels:
        app: bucket-api
    spec:
      serviceAccountName: bucket-api-ksa
      containers:
        - name: bucket-api
          image: gcr.io/<project-id>/bucket-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "0.25"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bucket-api
  namespace: bucket-api-ns
  annotations:
    app: 'bucket-api'
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "bucket-api-backend-config"}'
spec:
  selector:
    app: bucket-api
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "bucket-api-ingress"
  namespace: bucket-api-ns
  annotations:
    app: 'bucket-api'
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bucket-api
                port:
                  number: 8000
